--- a/Screen/Tools/SBS/thoratou.config
+++ b/Screen/Tools/SBS/thoratou.config
@@ -1,4 +1,4 @@
 #personal specific configuration 
 
 #sbs local repository root
-REPOSITORY_ROOT = C:/lib/sbs
+REPOSITORY_ROOT = C:/Users/Thanh/Documents/Developments/SbsRepository
