--- a/Screen/Tools/SBS/wascana.config
+++ b/Screen/Tools/SBS/wascana.config
@@ -15,3 +15,6 @@ DEFAULT_SHARED_LIB_FULL_NAME = lib${LIB_NAME}.dll
 DEFAULT_STATIC_LIB_COMPILE_NAME = ${LIB_NAME}
 DEFAULT_STATIC_LIB_FULL_NAME = lib${LIB_NAME}.a
 DEFAULT_EXE_FULL_NAME = ${EXE_NAME}.exe
+
+#launch executable (run and test command)
+LAUNCH_COMMAND = ${EXE_NAME}.exe.${EXE_VERSION}
