--- a/Screen/Tools/SBS/wascana.config
+++ b/Screen/Tools/SBS/wascana.config
@@ -16,5 +16,8 @@ DEFAULT_STATIC_LIB_COMPILE_NAME = ${LIB_NAME}
 DEFAULT_STATIC_LIB_FULL_NAME = lib${LIB_NAME}.a
 DEFAULT_EXE_FULL_NAME = ${EXE_NAME}.exe
 
+#build command
+COMPILE_COMMAND = ${WASCANA_ROOT}/msys/bin/make all
+
 #launch executable (run and test command)
 LAUNCH_COMMAND = ${EXE_NAME}.exe.${EXE_VERSION}
