new variable for dropbox repo
git-svn-id: http://sbs.googlecode.com/svn/trunk@71 470984fe-aa8c-d0eb-2131-b18db9c326a8

--- a/Screen/Tools/SBS/thoratou-linux.config
+++ b/Screen/Tools/SBS/thoratou-linux.config
@@ -2,4 +2,5 @@
 
 #sbs local repository root
 REPOSITORY_ROOT = /home/thomas/.sbs
+SCREEN_DEPS_REPOSOTORY_ROOT =/home/thomas/Dropbox/ScreenFrameWork/SBS-repository-Linux
 
