--- a/Screen/Tools/SBS/thoratou.config
+++ b/Screen/Tools/SBS/thoratou.config
@@ -2,3 +2,4 @@
 
 #sbs local repository root
 REPOSITORY_ROOT = C:/Users/Thanh/Documents/Developments/SbsRepository
+SCREEN_DEPS_REPOSOTORY_ROOT = C:/Users/Thanh/Documents/My Dropbox/ScreenFrameWork/SBS-repository
