--- a/Screen/Tools/SBS/thoratou.config
+++ b/Screen/Tools/SBS/thoratou.config
@@ -1,5 +1,5 @@
 #personal specific configuration 
 
 #sbs local repository root
-REPOSITORY_ROOT = C:/Users/Thanh/Documents/Developments/SbsRepository
+REPOSITORY_ROOT = ${HOME}/.sbs
 SCREEN_DEPS_REPOSOTORY_ROOT = C:/Users/Thanh/Documents/My Dropbox/ScreenFrameWork/SBS-repository
