add json-simple dependency implement FieldJSONObject.java and FieldObject.java to handle JSON objects implement "config flags as JSON object" changed screen config files to declare flags with JSON text
git-svn-id: http://sbs.googlecode.com/svn/trunk@93 470984fe-aa8c-d0eb-2131-b18db9c326a8

--- a/Screen/Tools/SBS/pom.xml
+++ b/Screen/Tools/SBS/pom.xml
@@ -48,6 +48,11 @@
 			<version>2.5.D1</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1</version>
+		</dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
