--- a/Screen/Tools/SBS/screen.config
+++ b/Screen/Tools/SBS/screen.config
@@ -1,6 +1,6 @@
 #global configuration file for SBS
 
 #Screen compiler additional flags
-RELEASE_FLAGS = SCREEN_ASSERT SCREEN_AUTHORIZE_LOG_INFO
-DEBUG_FLAGS = SCREEN_ASSERT SCREEN_AUTHORIZE_LOG_DEBUG SCREEN_AUTHORIZE_PROFILE SCREEN_AUTHORIZE_LOG_CALL_TRACER
+RELEASE_FLAGS = {"SCREEN_ASSERT":null,"SCREEN_AUTHORIZE_LOG_INFO":null}
+DEBUG_FLAGS = {"SCREEN_ASSERT":null,"SCREEN_AUTHORIZE_LOG_DEBUG":null,"SCREEN_AUTHORIZE_PROFILE":null,"SCREEN_AUTHORIZE_LOG_CALL_TRACER":null}
 
