add condition variable for rc compiler become mandatory with CMake 2.8.4 for wascana try_compile test http://www.vtk.org/Wiki/CMake_Cross_Compiling#The_toolchain_file
git-svn-id: http://sbs.googlecode.com/svn/trunk@100 470984fe-aa8c-d0eb-2131-b18db9c326a8

--- a/Screen/Tools/SBS/wascana.config
+++ b/Screen/Tools/SBS/wascana.config
@@ -8,6 +8,7 @@ TARGET_ENV = Eclipse CDT4 - Unix Makefiles
 MAKE_PROGRAM = ${WASCANA_ROOT}/msys/bin/make.exe
 C_COMPILER = ${WASCANA_ROOT}/mingw/bin/gcc.exe
 CPP_COMPILER = ${WASCANA_ROOT}/mingw/bin/g++.exe
+RC_COMPILER = ${WASCANA_ROOT}/mingw/bin/windres.exe
 
 #default paths
 DEFAULT_SHARED_LIB_COMPILE_NAME = ${LIB_NAME}
