fixed all mingw base config : no more color output (don't work on wascana and cmd prompt) set -enable-auto-import linker flag to avoid cppunit link compilation warning
git-svn-id: http://sbs.googlecode.com/svn/trunk@107 470984fe-aa8c-d0eb-2131-b18db9c326a8

--- a/Screen/Tools/SBS/mingw.config
+++ b/Screen/Tools/SBS/mingw.config
@@ -10,6 +10,9 @@ C_COMPILER = ${MINGW_ROOT}/gcc.exe
 CPP_COMPILER = ${MINGW_ROOT}/g++.exe
 RC_COMPILER = ${MINGW_ROOT}/windres.exe
 
+CMAKE_ADD_VAR_SET = { \
+	"CMAKE_EXE_LINKER_FLAGS":"-enable-auto-import"}
+
 #default paths
 DEFAULT_SHARED_LIB_COMPILE_NAME = ${LIB_NAME}
 DEFAULT_SHARED_LIB_FULL_NAME = lib${LIB_NAME}.dll
