--- a/Screen/Tools/SBS/msys.config
+++ b/Screen/Tools/SBS/msys.config
@@ -9,9 +9,16 @@ MAKE_PROGRAM = ${WASCANA_ROOT}/msys/bin/make.exe
 C_COMPILER = ${WASCANA_ROOT}/mingw/bin/gcc.exe
 CPP_COMPILER = ${WASCANA_ROOT}/mingw/bin/g++.exe
 
+CMAKE_ADD_VAR_SET = { \
+	"CMAKE_EXE_LINKER_FLAGS":"-enable-auto-import", \
+	"CMAKE_COLOR_MAKEFILE":"OFF"}
+
 #default paths
 DEFAULT_SHARED_LIB_COMPILE_NAME = ${LIB_NAME}
 DEFAULT_SHARED_LIB_FULL_NAME = lib${LIB_NAME}.dll
 DEFAULT_STATIC_LIB_COMPILE_NAME = ${LIB_NAME}
 DEFAULT_STATIC_LIB_FULL_NAME = lib${LIB_NAME}.a
 DEFAULT_EXE_FULL_NAME = ${EXE_NAME}.exe
+
+#build command
+COMPILE_COMMAND = ${WASCANA_ROOT}/msys/bin/make all
