--- a/Screen/Tools/SBS/wascana.config
+++ b/Screen/Tools/SBS/wascana.config
@@ -10,6 +10,10 @@ C_COMPILER = ${WASCANA_ROOT}/mingw/bin/gcc.exe
 CPP_COMPILER = ${WASCANA_ROOT}/mingw/bin/g++.exe
 RC_COMPILER = ${WASCANA_ROOT}/mingw/bin/windres.exe
 
+CMAKE_ADD_VAR_SET = { \
+	"CMAKE_EXE_LINKER_FLAGS":"-enable-auto-import", \
+	"CMAKE_COLOR_MAKEFILE":"OFF"}
+
 #default paths
 DEFAULT_SHARED_LIB_COMPILE_NAME = ${LIB_NAME}
 DEFAULT_SHARED_LIB_FULL_NAME = lib${LIB_NAME}.dll
