restore classpath remove unneeded parts into sbs scripts
git-svn-id: http://sbs.googlecode.com/svn/trunk@108 470984fe-aa8c-d0eb-2131-b18db9c326a8

--- a/Screen/Tools/SBS/pom.xml
+++ b/Screen/Tools/SBS/pom.xml
@@ -79,7 +79,8 @@
                     <archive>
                         <manifest>
                             <mainClass>screen.tools.sbs.Main</mainClass>
-                            <addClasspath>false</addClasspath>
+                            <addClasspath>true</addClasspath>
+							<classpathPrefix>lib</classpathPrefix>
                         </manifest>
                     </archive>
                 </configuration>
