run and test targets implemented updated a little configurations to take good executable name
git-svn-id: http://sbs.googlecode.com/svn/trunk@136 470984fe-aa8c-d0eb-2131-b18db9c326a8

--- a/Screen/Tools/SBS/mingw.config
+++ b/Screen/Tools/SBS/mingw.config
@@ -20,5 +20,8 @@ DEFAULT_STATIC_LIB_COMPILE_NAME = ${LIB_NAME}
 DEFAULT_STATIC_LIB_FULL_NAME = lib${LIB_NAME}.a
 DEFAULT_EXE_FULL_NAME = ${EXE_NAME}.exe
 
+#build command
 COMPILE_COMMAND = ${MINGW_ROOT}/mingw32-make all
 
+#launch executable (run and test command)
+LAUNCH_COMMAND = ${EXE_NAME}.exe
