--- a/Screen/Tools/SBS/msys.config
+++ b/Screen/Tools/SBS/msys.config
@@ -22,3 +22,6 @@ DEFAULT_EXE_FULL_NAME = ${EXE_NAME}.exe
 
 #build command
 COMPILE_COMMAND = ${WASCANA_ROOT}/msys/bin/make all
+
+#launch executable (run and test command)
+LAUNCH_COMMAND = ${EXE_NAME}.exe
