--- a/Screen/Tools/SBS/mvs8.config
+++ b/Screen/Tools/SBS/mvs8.config
@@ -13,3 +13,6 @@ DEFAULT_SHARED_LIB_FULL_NAME = ${LIB_NAME}.dll
 DEFAULT_STATIC_LIB_COMPILE_NAME = ${LIB_NAME}
 DEFAULT_STATIC_LIB_FULL_NAME = ${LIB_NAME}.lib
 DEFAULT_EXE_FULL_NAME = ${EXE_NAME}.exe
+
+#launch executable (run and test command)
+LAUNCH_COMMAND = ${EXE_NAME}.exe
