--- a/Screen/Tools/SBS/wascana.config
+++ b/Screen/Tools/SBS/wascana.config
@@ -25,4 +25,4 @@ DEFAULT_EXE_FULL_NAME = ${EXE_NAME}.exe
 COMPILE_COMMAND = ${WASCANA_ROOT}/msys/bin/make all
 
 #launch executable (run and test command)
-LAUNCH_COMMAND = ${EXE_NAME}.exe.${EXE_VERSION}
+LAUNCH_COMMAND = ${EXE_NAME}.exe
