forgot linux launch config change
git-svn-id: http://sbs.googlecode.com/svn/trunk@138 470984fe-aa8c-d0eb-2131-b18db9c326a8

--- a/Screen/Tools/SBS/linux.config
+++ b/Screen/Tools/SBS/linux.config
@@ -22,5 +22,5 @@ DEFAULT_EXE_FULL_NAME = ${EXE_NAME}
 COMPILE_COMMAND = make -j 2 all
 
 #launch executable (run and test command)
-LAUNCH_COMMAND = ./${EXE_NAME}.${EXE_VERSION}
+LAUNCH_COMMAND = ./${EXE_NAME}
 
