http://code.google.com/p/sbs/issues/detail?id=20 swapped SBS_ROOT and SBS_HOME into code and scripts
git-svn-id: http://sbs.googlecode.com/svn/trunk@142 470984fe-aa8c-d0eb-2131-b18db9c326a8

--- a/Screen/Tools/SBS/thoratou.config
+++ b/Screen/Tools/SBS/thoratou.config
@@ -1,5 +1,5 @@
 #personal specific configuration 
 
 #sbs local repository root
-REPOSITORY_ROOT = ${HOME}/.sbs
+REPOSITORY_ROOT = ${SBS_HOME}
 SCREEN_DEPS_REPOSOTORY_ROOT = C:/Users/Thanh/Documents/My Dropbox/ScreenFrameWork/SBS-repository
