--- a/Screen/Tools/SBS/thoratou-linux.config
+++ b/Screen/Tools/SBS/thoratou-linux.config
@@ -1,6 +1,6 @@
 #personal specific configuration 
 
 #sbs local repository root
-REPOSITORY_ROOT = ${HOME}/.sbs
+REPOSITORY_ROOT = ${SBS_HOME}
 SCREEN_DEPS_REPOSOTORY_ROOT =/home/thomas/Dropbox/ScreenFrameWork/SBS-repository-Linux
 
