--- a/Screen/Tools/SBS/pom.xml
+++ b/Screen/Tools/SBS/pom.xml
@@ -58,10 +58,15 @@
       		<artifactId>sqlite-jdbc</artifactId>
       		<version>3.7.2</version>
     	</dependency>
+    	<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant</artifactId>
+			<version>1.8.3</version>
+		</dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.1</version>
+            <version>4.10</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
