--- a/exact-binding/pom.xml
+++ b/exact-binding/pom.xml
@@ -55,6 +55,7 @@
 				<configuration>
 					<source>1.6</source> 
 					<target>1.6</target> 
+					<compilerArgument>-proc:none</compilerArgument>
 				</configuration>
 			</plugin>
             <plugin>
@@ -98,6 +99,25 @@
 						<goals>
 							<goal>generate</goal>
 						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.bsc.maven</groupId>
+				<artifactId>maven-processor-plugin</artifactId>
+				<version>2.0.5</version>
+				<executions>
+					<execution>
+					    <id>process-test</id>
+						<goals>
+							<goal>process-test</goal>
+						</goals>
+						<phase>generate-test-sources</phase>
+						<configuration>
+							<processors>
+								<processor>com.thoratou.exact.processors.ExactProcessor</processor>
+							</processors>
+						</configuration> 
 					</execution>
 				</executions>
 			</plugin>
