--- a/exact-binding/pom.xml
+++ b/exact-binding/pom.xml
@@ -18,6 +18,55 @@
             <version>1.7</version>
         </dependency>
         <dependency>
+            <groupId>org.jibx.config.3rdparty.org.eclipse</groupId>
+            <artifactId>org.eclipse.jdt.core</artifactId>
+            <version>3.7.0.v_B61</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jibx.config.3rdparty.org.eclipse</groupId>
+            <artifactId>org.eclipse.text</artifactId>
+            <version>3.5.100.v20110505-0800</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jibx.config.3rdparty.org.eclipse</groupId>
+            <artifactId>org.eclipse.core.runtime</artifactId>
+            <version>3.7.0.v20110110</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jibx.config.3rdparty.org.eclipse</groupId>
+            <artifactId>org.eclipse.core.resources</artifactId>
+            <version>3.7.100.v20110510-0712</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jibx.config.3rdparty.org.eclipse</groupId>
+            <artifactId>org.eclipse.equinox.common</artifactId>
+            <version>3.6.0.v20110523</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jibx.config.3rdparty.org.eclipse</groupId>
+            <artifactId>org.eclipse.core.jobs</artifactId>
+            <version>3.5.100.v20110404</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jibx.config.3rdparty.org.eclipse</groupId>
+            <artifactId>org.eclipse.core.contenttype</artifactId>
+            <version>3.4.100.v20110423-0524</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jibx.config.3rdparty.org.eclipse</groupId>
+            <artifactId>org.eclipse.equinox.preferences</artifactId>
+            <version>3.4.0.v20110502</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jibx.config.3rdparty.org.eclipse</groupId>
+            <artifactId>org.eclipse.osgi</artifactId>
+            <version>3.7.0.v20110613</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.jdom</groupId>
             <artifactId>jdom</artifactId>
             <version>1.1</version>
